Refactored guessnumber-jsf